--- a/pom.xml
+++ b/pom.xml
@@ -24,4 +24,16 @@
         </dependency>
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.1</version>
+            </plugin>
+        </plugins>
+        <directory>G:\Users\Michael\IdeaProjects\Locker\target\LockerTest\plugins</directory>
+        <finalName>Kettle</finalName>
+    </build>
+
 </project>
