--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -4,3 +4,6 @@ db_pass: 1234
 ### CHANGE THIS PASSWORD ###
 # This is the password admins will use to execute admin commands
 superuser_pass: 12345
+
+#set to -1 to disable chest expiry
+chest_expiry: 43200
